<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        app:boxBackgroundMode="outline"
        app:helperText="@string/helper_nombre"
        app:counterEnabled="true"
        app:counterMaxLength="25"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_icon"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ID_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fecha"
        android:paddingTop="@dimen/padding_text"
        app:helperText="@string/helper_fecha"
        app:startIconDrawable="@drawable/ic_icon"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ID_calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telefono"
        android:paddingTop="@dimen/padding_text"
        app:counterEnabled="true"
        app:counterMaxLength="25"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_icon"
        app:helperText="@string/helper_telefono"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ID_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:paddingTop="@dimen/padding_text"
        app:counterEnabled="true"
        app:counterMaxLength="25"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_icon"
        app:helperText="@string/helper_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ID_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:paddingTop="@dimen/padding_text"
        app:counterEnabled="true"
        app:counterMaxLength="25"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_icon"
        app:helperText="@string/helper_description"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ID_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_button"
        >

        <Button
            android:id="@+id/ID_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_1"
            android:theme="@style/MyRaisedButton"
            />

    </LinearLayout>


</LinearLayout>